[project]
name = "cortex-search-eval-tool"
version = "0"
description = "Tool to evaluate the quality of Cortex Search Service against a set of queries and goldens"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "snowflake-connector-python>=3.12.2",
    "snowflake-snowpark-python>=1.23.0",
    "streamlit>=1.39.0",
    "matplotlib>=3.7.2",
    "pandas>=2.0.3",
    "scikit-learn>=1.5.1",
    "scikit-optimize>=0.9.0",
    "scipy>=1.13.1",
    "snowflake>=0.13.0",
    "ruff>=0.7.1",    
    "pytest",
    "snowflake-ml-python",
]

[tool.uv]
dev-dependencies = [
    "watchdog>=5.0.3",
]
