[project]
name = "cortex-search-eval-tool"
version = "0"
description = "Tool to evaluate the quality of Cortex Search Service against a set of queries and goldens"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "snowflake-connector-python>=3.12.2",
    "snowflake-snowpark-python>=1.23.0",
    "streamlit>=1.39.0",
    "matplotlib>=3.7.2",
    "pandas>=2.0.3",
    "snowflake>=0.13.0",
    "ruff>=0.7.1",
    "pytest>=8.3.3",
]

[tool.uv]
dev-dependencies = [
    "watchdog>=5.0.3",
]
